--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 atomicwrites==1.4.0
 attrs==21.4.0
+certifi==2022.6.15
+charset-normalizer==2.1.0
 colorama==0.4.4
 et-xmlfile==1.1.0
 flake8==4.0.1
+idna==3.3
 importlib-metadata==4.2.0
 iniconfig==1.1.1
+lxml==4.9.1
 mccabe==0.6.1
 openpyxl==3.0.9
 packaging==21.3
@@ -14,9 +18,11 @@ pycodestyle==2.8.0
 pyflakes==2.4.0
 pyparsing==3.0.9
 pytz==2022.1
+requests==2.28.1
 sqlparse==0.4.2
 tomli==2.0.1
 typing_extensions==4.1.1
+urllib3==1.26.9
 xlrd==1.2.0
 XlsxWriter==3.0.3
 zipp==3.7.0
